{
  "version": 4,
  "terraform_version": "1.13.3",
  "serial": 184,
  "lineage": "57067217-3b60-a18a-d7a7-22c7d957d62e",
  "resources": [
    {
      "mode": "data",
      "type": "aws_security_group",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:901444280953:security-group/sg-032bd1ff8cf77dbb9",
            "description": "Security Group - Default Port for CAB432 EC2 Users",
            "filter": null,
            "id": "sg-032bd1ff8cf77dbb9",
            "name": "CAB432SG",
            "region": "ap-southeast-2",
            "tags": {
              "Name": "Security Group for CAB432",
              "qut-username": "n12142522@qut.edu.au"
            },
            "timeouts": null,
            "vpc_id": "vpc-007bab53289655834"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:901444280953:vpc/vpc-007bab53289655834",
            "cidr_block": "172.31.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-034452122c8319075",
                "cidr_block": "172.31.0.0/16",
                "state": "associated"
              }
            ],
            "default": false,
            "dhcp_options_id": "dopt-0dcd81db9bf347653",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-007bab53289655834",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-04c3d59af838a3821",
            "owner_id": "901444280953",
            "region": "ap-southeast-2",
            "tags": {
              "Name": "aws-controltower-VPC",
              "qut-username": "10701028"
            }
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-2:901444280953:loadbalancer/app/steam-predictor-alb/8ea58fc0cb3cf8cc",
            "arn_suffix": "app/steam-predictor-alb/8ea58fc0cb3cf8cc",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "steam-predictor-alb-1165430707.ap-southeast-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:ap-southeast-2:901444280953:loadbalancer/app/steam-predictor-alb/8ea58fc0cb3cf8cc",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "steam-predictor-alb",
            "preserve_host_header": false,
            "region": "ap-southeast-2",
            "security_groups": [
              "sg-032bd1ff8cf77dbb9"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-04ca053dcbe5f49cc"
              },
              {
                "subnet_id": "subnet-05a3b8177138c8b14"
              },
              {
                "subnet_id": "subnet-075811427d5564cf9"
              }
            ],
            "subnets": [
              "subnet-04ca053dcbe5f49cc",
              "subnet-05a3b8177138c8b14",
              "subnet-075811427d5564cf9"
            ],
            "tags": {
              "project": "steam-market-predictor",
              "purpose": "assessment3",
              "qut-username": "n11275561@qut.edu.au",
              "qut-username2": "n11803444@qut.edu.au"
            },
            "tags_all": {
              "project": "steam-market-predictor",
              "purpose": "assessment3",
              "qut-username": "n11275561@qut.edu.au",
              "qut-username2": "n11803444@qut.edu.au"
            },
            "vpc_id": "vpc-007bab53289655834",
            "xff_header_processing_mode": "append",
            "zone_id": "Z1GM3OXH4ZPM65"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-2:901444280953:loadbalancer/app/steam-predictor-alb/8ea58fc0cb3cf8cc"
          },
          "dependencies": [
            "data.aws_security_group.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-2:901444280953:listener/app/steam-predictor-alb/8ea58fc0cb3cf8cc/337623aea35608d4",
            "certificate_arn": "arn:aws:acm:ap-southeast-2:901444280953:certificate/3c579364-0e7b-40d3-a883-4c91769b8fda",
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-southeast-2:901444280953:targetgroup/steam-predictor-web-loadb/e140bc8d18dae95d",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-2:901444280953:listener/app/steam-predictor-alb/8ea58fc0cb3cf8cc/337623aea35608d4",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-southeast-2:901444280953:loadbalancer/app/steam-predictor-alb/8ea58fc0cb3cf8cc",
            "mutual_authentication": [
              {
                "advertise_trust_store_ca_names": "",
                "ignore_client_certificate_expiry": false,
                "mode": "off",
                "trust_store_arn": ""
              }
            ],
            "port": 443,
            "protocol": "HTTPS",
            "region": "ap-southeast-2",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": "",
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": "",
            "routing_http_request_x_amzn_tls_version_header_name": "",
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "ELBSecurityPolicy-2016-08",
            "tags": {
              "project": "steam-market-predictor",
              "purpose": "assessment3",
              "qut-username": "n11275561@qut.edu.au",
              "qut-username2": "n11803444@qut.edu.au"
            },
            "tags_all": {
              "project": "steam-market-predictor",
              "purpose": "assessment3",
              "qut-username": "n11275561@qut.edu.au",
              "qut-username2": "n11803444@qut.edu.au"
            },
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-2:901444280953:listener/app/steam-predictor-alb/8ea58fc0cb3cf8cc/337623aea35608d4"
          },
          "dependencies": [
            "aws_lb.main",
            "aws_lb_target_group.web",
            "data.aws_security_group.default",
            "data.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "api_domain",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-southeast-2:901444280953:targetgroup/steam-predictor-api-loadb/691cae18d3b4e4c3",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-2:901444280953:listener-rule/app/steam-predictor-alb/8ea58fc0cb3cf8cc/337623aea35608d4/1d7f434f4372cac5",
            "condition": [
              {
                "host_header": [
                  {
                    "values": [
                      "steam-market-price-predictor-api.cab432.com"
                    ]
                  }
                ],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-2:901444280953:listener-rule/app/steam-predictor-alb/8ea58fc0cb3cf8cc/337623aea35608d4/1d7f434f4372cac5",
            "listener_arn": "arn:aws:elasticloadbalancing:ap-southeast-2:901444280953:listener/app/steam-predictor-alb/8ea58fc0cb3cf8cc/337623aea35608d4",
            "priority": 10,
            "region": "ap-southeast-2",
            "tags": {},
            "tags_all": {}
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-2:901444280953:listener-rule/app/steam-predictor-alb/8ea58fc0cb3cf8cc/337623aea35608d4/1d7f434f4372cac5"
          },
          "dependencies": [
            "aws_lb.main",
            "aws_lb_listener.https",
            "aws_lb_target_group.api",
            "aws_lb_target_group.web",
            "data.aws_security_group.default",
            "data.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "web_domain",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-southeast-2:901444280953:targetgroup/steam-predictor-web-loadb/e140bc8d18dae95d",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-2:901444280953:listener-rule/app/steam-predictor-alb/8ea58fc0cb3cf8cc/337623aea35608d4/b70e76ae631f5d06",
            "condition": [
              {
                "host_header": [
                  {
                    "values": [
                      "steam-market-price-predictor.cab432.com"
                    ]
                  }
                ],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-2:901444280953:listener-rule/app/steam-predictor-alb/8ea58fc0cb3cf8cc/337623aea35608d4/b70e76ae631f5d06",
            "listener_arn": "arn:aws:elasticloadbalancing:ap-southeast-2:901444280953:listener/app/steam-predictor-alb/8ea58fc0cb3cf8cc/337623aea35608d4",
            "priority": 20,
            "region": "ap-southeast-2",
            "tags": {},
            "tags_all": {}
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-2:901444280953:listener-rule/app/steam-predictor-alb/8ea58fc0cb3cf8cc/337623aea35608d4/b70e76ae631f5d06"
          },
          "dependencies": [
            "aws_lb.main",
            "aws_lb_listener.https",
            "aws_lb_target_group.web",
            "data.aws_security_group.default",
            "data.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "api",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-2:901444280953:targetgroup/steam-predictor-api-loadb/691cae18d3b4e4c3",
            "arn_suffix": "targetgroup/steam-predictor-api-loadb/691cae18d3b4e4c3",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/health",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-2:901444280953:targetgroup/steam-predictor-api-loadb/691cae18d3b4e4c3",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:ap-southeast-2:901444280953:loadbalancer/app/steam-predictor-alb/8ea58fc0cb3cf8cc"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "steam-predictor-api-loadb",
            "port": 3010,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "region": "ap-southeast-2",
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "project": "steam-market-predictor",
              "purpose": "assessment3",
              "qut-username": "n11275561@qut.edu.au",
              "qut-username2": "n11803444@qut.edu.au"
            },
            "tags_all": {
              "project": "steam-market-predictor",
              "purpose": "assessment3",
              "qut-username": "n11275561@qut.edu.au",
              "qut-username2": "n11803444@qut.edu.au"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-007bab53289655834"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-2:901444280953:targetgroup/steam-predictor-api-loadb/691cae18d3b4e4c3"
          },
          "dependencies": [
            "data.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-2:901444280953:targetgroup/steam-predictor-web-loadb/e140bc8d18dae95d",
            "arn_suffix": "targetgroup/steam-predictor-web-loadb/e140bc8d18dae95d",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-2:901444280953:targetgroup/steam-predictor-web-loadb/e140bc8d18dae95d",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:ap-southeast-2:901444280953:loadbalancer/app/steam-predictor-alb/8ea58fc0cb3cf8cc"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "steam-predictor-web-loadb",
            "port": 3009,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "region": "ap-southeast-2",
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "project": "steam-market-predictor",
              "purpose": "assessment3",
              "qut-username": "n11275561@qut.edu.au",
              "qut-username2": "n11803444@qut.edu.au"
            },
            "tags_all": {
              "project": "steam-market-predictor",
              "purpose": "assessment3",
              "qut-username": "n11275561@qut.edu.au",
              "qut-username2": "n11803444@qut.edu.au"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-007bab53289655834"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-2:901444280953:targetgroup/steam-predictor-web-loadb/e140bc8d18dae95d"
          },
          "dependencies": [
            "data.aws_vpc.main"
          ]
        }
      ]
    }
  ]
}